[package]
name = "rustsdltest"
version = "0.1.0"
authors = ["Tim Nibert <docz2a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.26.1"
piston_window = "0.123.0"
find_folder = "0.3.0"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["image"]