[package]
name = "rustsdltest"
version = "0.1.0"
authors = ["Tim Nibert <docz2a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston_window = "0.123.0"
find_folder = "0.3.0"
piston = "0.53.0"
piston2d-graphics = "0.42.0"
pistoncore-glutin_window = "0.69.0"
piston2d-opengl_graphics = "0.81.0"

[dependencies.sdl2]
version = "0.35"
default-features = false
features = ["image"]