[package]
name = "town_demo"
version = "0.1.0"
authors = ["Tim Nibert <docz2a@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mercurylib"
path = "src/lib.rs"

[dependencies]
piston_window = "0.123.0"
find_folder = "0.3.0"
image = "0.24.2"
sdl2 = "0.35.2"
piston = "0.53.2"
piston2d-graphics = "0.43.0"
piston2d-opengl_graphics = "0.82.0"
pistoncore-sdl2_window = "0.68.0"
pistoncore-input = "1.0.1"